# Twap-Trading-API

./: LICENSE  README.md  api_database.db  pyproject.toml
.github/workflows/: ci.yml
Client/: Client.py
Server/Exchanges/: ExchangeBase.py  ExchangeBinance.py  ExchangeCoinbase.py
Server_/: Database.py  Server.py  TwapOrder.py  api_database.db  app.py  login.py  symbol.py  test.py
Server_/Authentification/: AuthentificationManager.py
Server_/Exchanges/: ExchangeBase.py  ExchangeBinance.py  ExchangeBybit.py  ExchangeCoinbase.py  ExchangeKraken.py  ExchangeKucoin.py  ExchangeMulti.py  __init__.py
tests/: test_server.py
twap_trading_api/Client/: Twap_Trading_API_Demo.py
twap_trading_api/Server_/: Database.py  Server.py  TwapOrder.py  api_database.db  klines.py  login.py  main.py  symbol.py  test.py  twap.py
twap_trading_api/Server_/Authentification/: AuthentificationManager.py
twap_trading_api/Server_/DatabaseManager/: Database.py  api_database.db
twap_trading_api/Server_/Exchanges/: ExchangeBase.py  ExchangeBinance.py  ExchangeBybit.py  ExchangeCoinbase.py  ExchangeKucoin.py  ExchangeMulti.py  __init__.py
twap_trading_api/Server_/Interface/: InterfaceKlines.py  InterfaceLogin.py  InterfaceSymbol  InterfaceSymbol.py  InterfaceTwap.py  main.py
