[tool.poetry]
name = "Twap-Trading-API"
version = "0.1.0"
description = "A complete system for paper trading using TWAP (Time-Weighted Average Price) orders with real market data, featuring real-time order book aggregation and execution simulation."
authors = ["Nassim Boussaid <nassim.boussaid@dauphine.eu>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
aiohttp = "^3.11.13"
fastapi = "^0.115.8"
jwt = "^1.3.1"
passlib = "^1.7.4"
pandas = "^2.2.3"
plotly = "^6.0.0"
pyjwt = "^2.10.0"
requests = "^2.32.3"
sqlalchemy = "^2.0.38"
starlette = "^0.45.3"
streamlit = "^1.42.2"
uvicorn = "^0.32.1"
websockets = "^15.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
setuptools = "^65.5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
